h1. CHANGELOG

h2. 2.2.9 September 10, 2012

* fix 'extras' recipe to improve error reporting when creating a project-specific rvm gemset

h2. 2.2.8 September 7, 2012

* run 'bundle update' before everything to avoid "already activated" gem issues
* fix 'extras' recipe to resolve issues creating a project-specific rvm gemset
* update gem 'haml-rails' from 0.3.4 to 0.3.5
* update gem 'slim' from 1.2.2 to 1.3.0
* update gem 'bootstrap-sass' from 2.0.4.0 to 2.1.0.0
* update gem 'puma' from 1.6.2 to 1.6.3
* update gem 'pg' from 0.14.0 to 0.14.1

h2. 2.2.7 September 1, 2012

* improve 'testing' recipe for better handling of RSpec 'spec/spec_helper.rb'

h2. 2.2.6 August 30, 2012

* fix 'prelaunch' recipe to correct application name in the routes.rb file

h2. 2.2.5 August 29, 2012

* fix 'frontend' recipe to remove application.css after twitter-bootstrap-rails creates it

h2. 2.2.4 August 29, 2012

* improve 'setup' recipe to save diagnostics before anything can fail
* improve 'setup' recipe to not offer "Twitter Bootstrap (Less)" to Windows users
* improve 'extras' recipe to only ask Linux users about adding 'therubyracer' gem
* fix 'setup' recipe for error introduced in version 2.2.3
* update gem 'puma' from 1.6.1 to 1.6.2

h2. 2.2.3 August 27, 2012

* fix 'setup', 'frontend', and 'controllers' recipes to allow CanCan authorization when OmniAuth authentication is selected

h2. 2.2.2 August 26, 2012

* fix 'prelaunch' recipe for missing Cucumber feature file
* improve an error message when Mongoid is selected and a SQLite gem is present

h2. 2.2.1 August 26, 2012

* fix regression introduced by 1cf28c09cc4a8d11f2f1a7e5b91fce724d0a9b73 (version 2.1.10)

h2. 2.2.0 August 26, 2012

* merge 'auth' recipe into 'models' recipe
* move 'form_builder' ingredient from 'extras' recipe to 'setup' recipe
* add 'prelaunch' recipe for rails-prelaunch-signup example app

h2. 2.1.10 August 25, 2012 

* update 'railsapps' recipe to allow choice of erb or Haml for all example apps