@@ -49,10 +49,22 @@ if prefs[:rvmrc]
   RVM.gemset_create app_name
   run "rvm rvmrc trust"
   say_wizard "switching to gemset '#{app_name}'"
+  # RVM.gemset_use! requires rvm version 1.11.3.5 or newer
+  rvm_spec =
+    if Gem::Specification.respond_to?(:find_by_name)
+      Gem::Specification.find_by_name("rvm")
+    else
+      Gem.source_index.find_name("rvm").last
+    end
+    unless rvm_spec.version > Gem::Version.create('1.11.3.4')
+      say_wizard "rvm gem version: #{rvm_spec.version}"
+      raise "Please update rvm gem to 1.11.3.5 or newer"
+    end
   begin
     RVM.gemset_use! app_name
-  rescue StandardError => e
-    raise "rvm failure: unable to use gemset #{app_name}, reason: #{e}"
+  rescue => e
+    say_wizard "rvm failure: unable to use gemset #{app_name}, reason: #{e}"
+    raise
   end
   run "rvm gemset list"
   copy_from_repo '.rvmrc'
